<?xml version="1.0"?>
<package>
  <name>m4atx_battery_monitor</name>
  <version>0.0.0</version>
  <description>The m4atx_battery_monitor package</description>

  <maintainer email="rail@wpi.edu">rail</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libusb</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libusb</run_depend>

</package>
