<?xml version="1.0"?>
<package>
  <name>m4atx_battery_monitor</name>
  <version>0.0.1</version>
  <description>Battery Monitor for the M4-ATX Power Module</description>

  <maintainer email="rctoris@wpi.edu">Russell Toris</maintainer>
  <author email="ktossell@umd.edu">Ken Tossell</author>
  <author email="cmdunkers@wpi.edu">Chris Dunkers</author>
  <author email="rctoris@wpi.edu">Russell Toris</author>

  <license>LGPL</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>libusb</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>libusb</run_depend>
  <run_depend>espeak</run_depend>
</package>
